[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy==1.24.3",
    "pandas==2.0.3",
    "pandas-ta>=0.3.14b0",
    "plotly>=6.1.2",
    "requests>=2.32.4",
    "scikit-learn==1.3.0",
    "streamlit>=1.46.0",
    "tensorflow>=2.14.0",
    "yfinance>=0.2.63",
]
